--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- page style  -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <!-- boxicon link -->
-        <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
+        <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
         <!-- google font link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +46,24 @@
                 <div class="bx bx-menu" id="menu-icon"></div>
             </div>
         </header>
+
+       <!--  <section class="home">
+            <div class="home-text">
+                <span>Full stack developper</span>
+                <h1>Ohssine Abdel<span>fatah</span></h1>
+                <p>Lorem, ipsum dolor sit amet
+                     consectetur adipisicing elit.
+                      Aliquid, excepturi?
+                </p>
+                <div class="main-btn">
+                    <a href="#" class="btn">Download CV</a>
+                    <a href="#" class="btn">Hire Me Now</a>
+                </div>
+            </div>
+            <div class="home-img">
+                <img src="images/" alt="">
+            </div>
+        </section> -->
         <!-- custom js file -->
         <script src="scripts/script.js"></script>
     </body>
