--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
             </div>
         </header>
 
-       <!--  <section class="home">
+        <section class="home">
             <div class="home-text">
                 <span>Full stack developper</span>
-                <h1>Ohssine Abdel<span>fatah</span></h1>
+                <h1>FETA7</h1>
                 <p>Lorem, ipsum dolor sit amet
                      consectetur adipisicing elit.
                       Aliquid, excepturi?
                 </p>
                 <div class="main-btn">
                     <a href="#" class="btn">Download CV</a>
-                    <a href="#" class="btn">Hire Me Now</a>
+                    <a href="#" class="btn two">Hire Me Now</a>
                 </div>
             </div>
             <div class="home-img">
-                <img src="images/" alt="">
+                <img src="images/girl-1.png" alt="image">
             </div>
-        </section> -->
+        </section>
         <!-- custom js file -->
         <script src="scripts/script.js"></script>
     </body>
