--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>FETA7</title>
         <!-- page style  -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <!-- boxicon link -->
-        <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
+        <!-- fontaawesome link -->
+        <script src="https://kit.fontawesome.com/67fc199a01.js" crossorigin="anonymous"></script>
         <!-- google font link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,7 @@
             </ul>
 
             <div class="menu-btn">
-                <span>INTRO</span>
-                <div class="bx bx-menu" id="menu-icon"></div>
+                <div id="menu-icon"><i class="fa-solid fa-bars"></i></div>
             </div>
         </header>
 
@@ -64,6 +63,24 @@
                 <img src="images/girl-1.png" alt="image">
             </div>
         </section>
+
+        <div class="share">
+            <p>Check out my :</p>
+            <div class="social">
+                <a href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-skype"></i>
+                </a>
+            </div>
+        </div>
         <!-- custom js file -->
         <script src="scripts/script.js"></script>
     </body>
